@@ -28,7 +28,7 @@
   e2f730e78dc27254776b672fc007a4bef3dd0f56 2010090601 mingw32-autotools.xml
   31874b31b811211470b739b8af7fc6b9a97331e6 2013072200 mingw32-base.xml
   221dd61fa0e2d7745ba41d05d18a3114e946c513 2012073100 mingw32-basic-bsdtar.xml
-  ea49ff6a14616cefcb9fd1b4d49080875dfaf2f3 2013090900 mingw32-binutils.xml
+  1fb49705c36dd01febaf784309d2241fe296509a 2014061300 mingw32-binutils.xml
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   fcfc25a9507b994312829533a2ce7735ec9c1bbb 2014052000 mingw32-dos2unix.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   3b9dfae51f73761e69811f402c6374c63aeec552 2013110100 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  1413ad59660ad963082e7de10c31bbb725116aee 2014052000 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2014061300 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
