@@ -12,22 +12,26 @@
         <paragraph> This is a required component of the MinGW Compiler Suite.
         </paragraph>
         <paragraph>This package provides the GNU assembler, linker, archive
-	librarian, and other utilities for manipulating object format files.
+          librarian, and other utilities for manipulating object format files.
         </paragraph>
-	<paragraph>This package is enhanced by the libiconv and gettext DLL if
-	they are installed.  It does not require them to operate.
-	</paragraph>
+        <paragraph>This package is enhanced by the libiconv and gettext DLL if
+          they are installed.  It does not require them to operate.
+        </paragraph>
       </description>
 
       <source tarname="binutils-%-mingw32-src.tar.%" />
       <licence tarname="binutils-%-mingw32-lic.tar.%" />
 
       <component class="bin">
-	<release tarname="binutils-2.23.2-1-mingw32-bin.tar.lzma" >
-	  <requires eq="binutils-%-mingw32-dev.tar.lzma" />
-	  <requires eq="mingw32-libz-*-dll-1.tar" />
-	  <requires eq="mingw32-libgcc-*-dll-1.tar" />
-	</release>
+        <release tarname="binutils-2.24-1-mingw32-bin.tar.xz" >
+          <requires eq="binutils-%-mingw32-dev.tar.lzma" />
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
+        <release tarname="binutils-2.23.2-1-mingw32-bin.tar.lzma" >
+          <requires eq="binutils-%-mingw32-dev.tar.lzma" />
+          <requires eq="mingw32-libz-*-dll-1.tar" />
+          <requires eq="mingw32-libgcc-*-dll-1.tar" />
+        </release>
         <release tarname="binutils-2.23.1-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
         </release>
@@ -52,11 +56,23 @@
       </component>
 
       <component class="dev">
-	<release tarname="binutils-2.23.2-1-mingw32-dev.tar.lzma" />
+        <release tarname="binutils-2.24-1-mingw32-dev.tar.xz" />
+        <release tarname="binutils-2.23.2-1-mingw32-dev.tar.lzma" />
       </component>
 
       <component class="doc">
-	<release tarname="binutils-2.23.2-1-mingw32-doc.tar.lzma" />
+        <description lang="en">
+          <paragraph>As of release 2.24-1, this "doc" subpackage has been
+            superseded by the "info" and "man" subpackages; this subpackage
+            now delivers no content, and may be safely removed.
+          </paragraph>
+        </description>
+        <release tarname="binutils-2.24-1-mingw32-doc.tar.xz">
+          <download tarname="none" />
+          <requires eq="binutils-%-mingw32-info.tar" />
+          <requires eq="binutils-%-mingw32-man.tar" />
+        </release>
+        <release tarname="binutils-2.23.2-1-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.23.1-1-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.22-1-mingw32-doc.tar.lzma" />
         <release tarname="binutils-2.21.53-1-mingw32-doc.tar.lzma" />
@@ -67,14 +83,17 @@
       </component>
 
       <component class="info">
-	<release tarname="binutils-2.23.2-1-mingw32-info.tar.lzma" />
+        <release tarname="binutils-2.24-1-mingw32-info.tar.xz" />
+        <release tarname="binutils-2.23.2-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="man">
-	<release tarname="binutils-2.23.2-1-mingw32-man.tar.lzma" />
+        <release tarname="binutils-2.24-1-mingw32-man.tar.xz" />
+        <release tarname="binutils-2.23.2-1-mingw32-man.tar.lzma" />
       </component>
 
       <component class="lang">
+        <release tarname="binutils-2.24-1-mingw32-lang.tar.xz" />
         <release tarname="binutils-2.23.2-1-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.23.1-1-mingw32-lang.tar.lzma" />
         <release tarname="binutils-2.22-1-mingw32-lang.tar.lzma" />
@@ -89,4 +108,3 @@
   </package-collection>
 </software-distribution>
 <!-- vim: set nocompatible expandtab tw=80 ts=2 sw=2 ff=unix: -->
-
