@@ -1,3 +1,10 @@
+2014-06-13  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Upgrade mingw32-binutils to version 2.24
+
+	* mingw32/mingw32-binutils.xml: Add new release specifications.
+	* mingw32/issue.log common/issue.log: Updated accordingly.
+
 2014-05-20  Erwin Waterlander  <waterlan@xs4all.nl>
 
 	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.5.
